# UnnamedLang

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Langite.sln  README.md  basic.lang  test.lang  test.langite
CLI/: CLI.csproj  Program.cs
Langite/: CompileError.cs
Langite/Resolving/: ConstDeclarationScopeSearcher.cs  NameResolver.cs  TypeResolver.cs
Langite/Syntax/: Lexer.cs  Parser.cs  SourceLocation.cs  Token.cs  TokenKind.cs  TokenKindMethods.cs
Langite/Syntax/Ast/: Binary.cs  Block.cs  Builtin.cs  BuiltinArray.cs  Call.cs  ConstDeclaration.cs  Declaration.cs  DeclarationBase.cs  FieldAccess.cs  File.cs  Float.cs  Function.cs  GenericInstantiation.cs  GenericParameter.cs  If.cs  Integer.cs  Name.cs  Node.cs  ParenthesisedExpression.cs  PrettyPrinter.cs  Procedure.cs  Return.cs  Searcher.cs  String.cs  Unary.cs  Visitor.cs  Wildcard.cs
Langite/Types/: ArrayType.cs  BoolType.cs  CharType.cs  FloatType.cs  IType.cs  IntegerType.cs  PlaceholderType.cs  StringType.cs  Type.cs  TypeKind.cs  TypeType.cs  VoidType.cs
src/: Ast.cpp  Ast.hpp  CompileError.hpp  Lexer.cpp  Lexer.hpp  Main.cpp  Parsing.cpp  Parsing.hpp  Resolver.cpp  Resolver.hpp  Resolvers.cpp  Resolvers.hpp  SourceLocation.hpp  Token.cpp  Token.hpp  Types.cpp  Types.hpp  ast.rs  bytecode.rs  emit.rs  error.rs  eval.rs  execution.rs  lexer.rs  lib.rs  location.rs  parsing.rs  resolving.rs  source_location.rs  token.rs  types.rs
src/binding/: binding.rs  bound_nodes.rs  extra_checks.rs  mod.rs  types.rs
src/syntax/: ast.rs  lexer.rs  location.rs  mod.rs  parsing.rs  token.rs
